examples/test/testpolicy9605.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9605
  namespace: namespace172
spec:
  podSelector:
    matchLabels:
      key28: value25
      key49: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value13
          key48: value47
          key2: value31
      podSelector:
        matchLabels:
          key30: value3
